# Trading-Agent-Polymarket

./: .env.example  main.py  pyproject.toml
tests/: test_graph_integration.py  test_http_utils.py  test_llm_clients.py  test_memory.py  test_news.py  test_onchain.py  test_polymarket_ws.py  test_signal_processing.py
tradingagents/agents/utils/: memory.py
tradingagents/llm_clients/: TODO.md  anthropic_client.py  factory.py  google_client.py  openai_client.py  validators.py
tradingagents/prediction_market/: pm_config.py
tradingagents/prediction_market/agents/analysts/: event_analyst.py  information_analyst.py  odds_analyst.py  sentiment_analyst.py
tradingagents/prediction_market/agents/managers/: research_manager.py  risk_manager.py
tradingagents/prediction_market/agents/researchers/: no_researcher.py  yes_researcher.py
tradingagents/prediction_market/agents/risk_mgmt/: aggressive_debator.py  base_debator.py  conservative_debator.py  neutral_debator.py
tradingagents/prediction_market/agents/trader/: pm_trader.py
tradingagents/prediction_market/agents/utils/: pm_agent_utils.py  pm_tools.py
tradingagents/prediction_market/dataflows/: __init__.py  http_utils.py  news.py  onchain.py  polymarket.py  polymarket_ws.py
tradingagents/prediction_market/graph/: conditional_logic.py  pm_trading_graph.py  propagation.py  reflection.py  setup.py  signal_processing.py
